--- a/src/99_WildRiftMastery/app/src/main/AndroidManifest.xml
+++ b/src/99_WildRiftMastery/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         </activity>
         <activity android:name=".HomeActivity"
             />
+        <activity android:name=".ProfileActivity"
+            />
     </application>
 
 </manifest>
