--- a/src/99_WildRiftMastery/app/build.gradle
+++ b/src/99_WildRiftMastery/app/build.gradle
@@ -9,6 +9,10 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+
+        dataBinding{
+            enabled=true
+        }
     }
     buildTypes {
         release {
@@ -26,7 +30,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.synnapps:carouselview:0.1.5'
-//    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
@@ -36,5 +39,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation 'com.google.android.material:material:1.0.0'
-//    implementation project(path: ':library')
 }
